Bug 90985 - add pref to control scrollbar snap region size and disable snapping behavior by default on unix.  r=dean_tessman, sr=blake