layout/xul/base/src/nsSliderFrame.h
@@ -243,6 +243,7 @@ private:
 
   PRInt32 mCurPos;
   PRBool mMiddlePref;
+  PRInt32 mSnapMultiplier;
 
   nsIScrollbarListener* mScrollbarListener;
 
